--- a/Front/src/app/dashboard/dashboard.component.html
+++ b/Front/src/app/dashboard/dashboard.component.html
@@ -8,9 +8,9 @@
             <h1>Lendiup</h1>
         </a>
         <span class="navbar-spacer"></span>
-        <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
+        <!-- <button mat-icon-button [matMenuTriggerFor]="notificationMenu">
       <mat-icon matBadge="2" matBadgeColor="accent">notifications</mat-icon>
-    </button>
+    </button> -->
         <mat-menu #notificationMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
             <a mat-menu-item><span>Tienes una nueva factura</span></a>
         </mat-menu>
@@ -24,7 +24,7 @@
             <a mat-menu-item [routerLink]="['/dashboard/misdatos']">
                 <mat-icon>person</mat-icon><span>Mi Cuenta</span>
             </a>
-            <a mat-menu-item (click)="logout()" [routerLink]="['/auth/login']">
+            <a mat-menu-item (click)="logout()" [routerLink]="['/']">
                 <mat-icon>exit_to_app</mat-icon><span>Salir</span>
             </a>
         </mat-menu>
