--- a/Front/src/app/dashboard/datosconstruccion/datosconstruccion.component.scss
+++ b/Front/src/app/dashboard/datosconstruccion/datosconstruccion.component.scss
@@ -1,110 +1,108 @@
-h5 {
-  font-size: 150%;
-  font-weight: 700;
-}
 
 
-h2{
-  font-size: 150%;
-  font-weight: 700;
-}
-
-
-@media (min-width: 280px) {
-
-  mat-card-header img {
-    width: 25vw;
-    height: 12vh;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    margin-top: 5vh;
-    margin-left: 24%;
-    overflow: auto;
-  }
-}
-
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-
-  mat-card-header img {
-    width: 18vw;
-    height: 12vh;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    margin-top: 5vh;
-    margin-left: 34%;
-    overflow: auto;
-  }
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-
-  mat-card-header img {
-    width: 20vw;
-    height: 10vh;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    margin-top: 10vh;
-    margin-left: 3%;
-    margin-right: 18%;
-    overflow: auto;
-  }
-}
-
-// Medium devices (tablets, 900px and up)
-@media (min-width: 900px) {
-  mat-card-header img {
-    width: 18vw;
-    height: 12vh;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    margin-top: 2vh;
-    margin-left: 5%;
-    margin-right: 15%;
-    overflow: auto;
-  }
-}
-// Large devices (desktops, 992px and up)
-@media (min-width: 1170px) {
-  mat-card-header img {
-    width: 10vw;
-    height: 18h;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    margin-top: 8vh;
-    margin-left: 19%;
-    overflow: auto;
-  }
-}
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1350px) {
-  mat-card-header img {
-    width: 10vw;
-    height: 20vh;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    margin-top: 8vh;
-    margin-left: 23%;
-    overflow: auto;
-  }
-}
-
-.col-md-4 {
-  padding-right: 15px;
-  padding-left: 15px;
+.our-team {
+  padding: 30px 0 40px;
+  margin-bottom: 30px;
+  background-color: white;
   text-align: center;
+  overflow: hidden;
+  position: relative;
 }
 
-mat-card-header {
-  background-size: cover;
-  background-image: url("../../../assets/img/bg5.jpg");
-  height: 18%;
-  margin-bottom: 10%;
+.our-team .picture {
+  display: inline-block;
+  height: 130px;
+  width: 130px;
+  margin-bottom: 50px;
+  z-index: 1;
+  position: relative;
 }
 
-mat-card-subtitle,
-mat-card-title {
-  font-size: 100%;
+.our-team .picture::before {
+  content: "";
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  background-color: #1369ce;
+  position: absolute;
+  bottom: 135%;
+  right: 0;
+  left: 0;
+  opacity: 0.9;
+  transform: scale(3);
+  transition: all 0.3s linear 0s;
+}
+
+.our-team:hover .picture::before {
+  height: 100%;
+}
+
+.our-team .picture::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #1369ce;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.our-team .picture img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: all 0.9s ease 0s;
+}
+
+.our-team:hover .picture img {
+  box-shadow: 0 0 0 14px white;
+  transform: scale(0.7);
+}
+
+.our-team .title {
+  display: block;
+  font-size: 15px;
+  color: #4e5052;
+  text-transform: capitalize;
+}
+
+.our-team .social {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #1369ce;
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  transition: all 0.5s ease 0s;
+}
+
+.our-team:hover .social {
+  bottom: 0;
+}
+
+.our-team .social li {
+  display: inline-block;
+}
+
+.our-team .social li a {
+  display: block;
+  padding: 10px;
+  font-size: 17px;
+  color: white;
+  transition: all 0.3s ease 0s;
+  text-decoration: none;
+}
+
+.our-team .social li a:hover {
+  color: #1369ce;
+  background-color: white;
+}
+
+ul {
+  padding-left: 2rem;
+  list-style-type: none;
 }
