--- a/Front/src/app/dashboard/datospersonales/datospersonales.component.html
+++ b/Front/src/app/dashboard/datospersonales/datospersonales.component.html
@@ -179,27 +179,11 @@
     </div>
 
 
-    <mat-card class="col-md-4">
-      <mat-card-header>
-        <img class="img-fluid" src="../assets/img/mike.jpg" alt="Photo of a
-          Shiba Inu">
-      </mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-content>
-        <p>
-          "Aqui puedes llenar
-          <br> La solicitud
-          <br>Del prestamos
-          <br> que desees! "</p>
-      </mat-card-content>
-      <mat-card-actions>
-
-      </mat-card-actions>
-    </mat-card>
-
-
+    <div class="col-md-4">
+      <app-datosconstruccion></app-datosconstruccion>
+    </div>
   </div>
-</div>
+
 
 
 
