--- a/Front/src/app/dashboard/datostrabajo/datostrabajo.component.html
+++ b/Front/src/app/dashboard/datostrabajo/datostrabajo.component.html
@@ -307,28 +307,8 @@
     </div>
 
 
-    <mat-card class="col-md-4">
-      <mat-card-header>
-        <img class="img-fluid" src="../assets/img/mike.jpg" alt="Photo of a
-          Shiba Inu">
-      </mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{usuarioauth.name | uppercase}}</mat-card-title>
-      <mat-card-subtitle> {{usuarioauth.surname | uppercase}}</mat-card-subtitle>
-      <mat-card-subtitle> {{usuarioauth.email}}</mat-card-subtitle>
-      <mat-card-content>
-        <p>
-          "Aqui puedes llenar
-          <br> La solicitud
-          <br>Del prestamos
-          <br> que desees! "</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <!-- <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button> -->
-      </mat-card-actions>
-    </mat-card>
-
-
+    <div class="col-md-4">
+      <app-datosconstruccion></app-datosconstruccion>
+    </div>
   </div>
-</div>
+
