--- a/Front/src/app/dashboard/estadocuenta/estadocuenta.component.html
+++ b/Front/src/app/dashboard/estadocuenta/estadocuenta.component.html
@@ -1,20 +1,26 @@
-<div class="panel-header ">
+<div class="panel-header">
   <div class="header text-center">
-    <h2 class="title">MI FACTURA</h2>
+    <h2 class="title">MI ESTADO DE CUENTA</h2>
   </div>
 </div>
+
+
 <div class="main-content">
   <div class="row">
-    <div class="col-md-12">
-      <div class="card ">
-        <div class="card-header ">
-         Tu Cuenta
 
-        </div>
-        <div class="card-body ">
-          <div id="map" class="map"></div>
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-body">
+
+
+
+
         </div>
       </div>
     </div>
-  </div>
+
+
+<div class="col-md-4">
+  <app-datosconstruccion></app-datosconstruccion>
+</div>
 </div>
