--- a/Front/src/app/dashboard/misolicitud/misolicitud.component.html
+++ b/Front/src/app/dashboard/misolicitud/misolicitud.component.html
@@ -1,85 +1,143 @@
-<div class="panel-header ">
-    <div class="header text-center">
-        <h2 class="title">MIS PRESTAMOS, SOLICITUDES Y PAGOS</h2>
-    </div>
+<div class="panel-header">
+  <div class="header text-center">
+    <h2 class="title">MIS PRESTAMOS, SOLICITUDES Y PAGOS</h2>
+  </div>
 </div>
 
 <div class="main-content">
-    <div class="row">
-        <div class="col-md-8">
-            <mat-card class="example-card">
-                <mat-card-header>
-                    <div mat-card-avatar class="example-header-image"></div>
-                    <mat-card-title>Solicitudes De Prestamo</mat-card-title>
-                    <mat-card-subtitle *ngIf="numrequests == 0">No tienes
-                        <hr>
-                        <button routerLink="/dashboard/solicitud">Solicitalo Ya</button>
-                    </mat-card-subtitle>
+  <div class="row">
+    <div class="col-md-8">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Solicitudes De Prestamo</mat-card-title>
+          <mat-card-subtitle *ngIf="numrequests == 0">No tienes
+            <hr>
+            <button routerLink="/dashboard/solicitud">Solicitalo Ya</button>
+          </mat-card-subtitle>
 
-                </mat-card-header>
-                <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
-                <mat-card-content>
-                    <div class="text-black" *ngFor="let request of requests">
-                        <p> {{ request.createdAt | date: 'shortDate' }}</p>
-                        <p *ngFor="let producto of productos | searchnameproduct: request.idProduct"> {{ producto.name }}</p>
-                        <p> Monto: ${{ request.value | number: '1.0-0' }} </p>
-                        <p> Plazo: {{ request.time }} meses</p>
-                        <p>Estado</p>
-                        <button class="btDone" *ngIf="request.estate == 'Pendiente'" mat-raised-button>{{request.estate }}</button>
-                        <button class="btInProgress" *ngIf="request.estate == 'Asignada'" mat-raised-button>{{request.estate }}</button>
-                        <button class="btToDo" *ngIf="request.estate == 'Aprobada'" mat-raised-button>{{request.estate }}</button>
-                        <button class="btErr" *ngIf="request.estate == 'Rechazada'" mat-raised-button>{{request.estate }}</button>
-                        <hr>
-                        <p>Requisitos Faltantes</p>
-                        <button *ngIf="user == undefined && regPersonales" routerLink="/dashboard/datospersonales" class="button3">Datos Personales</button>
-                        <button *ngIf="request.regInmueble == false && regInmueble" routerLink="/dashboard/datosinmueble" class="button3">Datos Del Inmueble</button>
-                        <button *ngIf="request.regVehiculo == false && regVehiculo" routerLink="/dashboard/datosvehiculo" class="button3">Datos Del Vehiculo</button>
-                        <!-- <button *ngIf="request.regInmueble == false && regInmueble" routerLink="/dashboard/datosconstruccion" class="button3">Datos Construccion</button> -->
-                        <button *ngIf="request.regTrabajo == false && regTrabajo" routerLink="/dashboard/datostrabajo" class="button3">Datos De Trabajo</button>
-                        <button *ngIf="request.regReferencias == false && regReferencias" routerLink="/dashboard/datosreferencias" class="button3">Referencias Personales</button>
-                        <button *ngIf="request.regReferenciasCom == false && regReferenciasCom" routerLink="/dashboard/datosreferenciascom" class="button3">Referencias Comerciales</button>
-                        <hr>
-                        <p>Imagen O PDF De Las 2 Caras De Tu Cedula </p>
-                        <input type="file" class="file-upload" multiple>
-                        <button class="button3">Subir Documento</button>
-                        <hr>
-                        <p>Imagen O PDF De Las 2 Caras De Tu Tarjeta De Propiedad</p>
-                        <input type="file" class="file-upload" multiple>
-                        <button class="button3">Subir Documento</button>
-                        <hr>
-                        <p>Imagen O PDF De La Matricula Inmobiliaria</p>
-                        <input type="file" class="file-upload" multiple>
-                        <button class="button3">Subir Documento</button>
-                        <hr>
-                        <p>Imagen O PDF De Estractos Bancarios Ultimos 6 meses</p>
-                        <input type="file" class="file-upload" multiple>
-                        <button class="button3">Subir Documento</button>
-                    </div>
-                </mat-card-content>
+        </mat-card-header>
+        <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
+        <mat-card-content>
+          <div class="text-black" *ngFor="let request of requests">
+            <p> {{ request.createdAt | date: 'shortDate' }}</p>
+            <p *ngFor="let producto of productos | searchnameproduct:
+              request.idProduct"> {{ producto.name }}</p>
+            <p> Monto: ${{ request.value | number: '1.0-0' }} </p>
+            <p> Plazo: {{ request.time }} meses</p>
+            <p>Estado</p>
+            <button class="btDone" *ngIf="request.estate == 'Pendiente'"
+              mat-raised-button>{{request.estate }}</button>
+            <button class="btInProgress" *ngIf="request.estate == 'Asignada'"
+              mat-raised-button>{{request.estate }}</button>
+            <button class="btToDo" *ngIf="request.estate == 'Aprobada'"
+              mat-raised-button>{{request.estate }}</button>
+            <button class="btErr" *ngIf="request.estate == 'Rechazada'"
+              mat-raised-button>{{request.estate }}</button>
+            <hr>
+            <p>Requisitos Faltantes</p>
+            <button *ngIf="user == undefined && regPersonales"
+              routerLink="/dashboard/datospersonales" class="button3">Datos
+              Personales</button>
+            <button *ngIf="request.regInmueble == false && regInmueble"
+              routerLink="/dashboard/datosinmueble" class="button3">Datos Del
+              Inmueble</button>
+            <button *ngIf="request.regVehiculo == false && regVehiculo"
+              routerLink="/dashboard/datosvehiculo" class="button3">Datos Del
+              Vehiculo</button>
+            <!-- <button *ngIf="request.regInmueble == false && regInmueble" routerLink="/dashboard/datosconstruccion" class="button3">Datos Construccion</button> -->
+            <button *ngIf="request.regTrabajo == false && regTrabajo"
+              routerLink="/dashboard/datostrabajo" class="button3">Datos De
+              Trabajo</button>
+            <button *ngIf="request.regReferencias == false && regReferencias"
+              routerLink="/dashboard/datosreferencias" class="button3">Referencias
+              Personales</button>
+            <button *ngIf="request.regReferenciasCom == false &&
+              regReferenciasCom" routerLink="/dashboard/datosreferenciascom"
+              class="button3">Referencias Comerciales</button>
+            <hr>
+            <div class="row">
+              <div class="col-3  mb-3">
+                <p>Cedula - PDF/IMAGEN Con Ambas Caras</p>
+                <input type="file" class="d-none"
+                  (change)="OnDocSelected($event)" #cedulaInput>
+                <p><small>Haga Click En La Imagen Para Seleccionar Su Documento</small></p>
+                <img [src]="'../../../assets/img/cedula.jpg'" class="photo"
+                  alt="Sin
+                  Imagen" (click)="cedulaInput.click()">
+                <button class="btn button3 " (click)="uploadExtracto()">Enviar</button>
+              </div>
 
-            </mat-card>
-        </div>
-        <div class="col-md-4">
-            <mat-card class="example-card ">
-                <mat-card-header class="text-center">
-                    <div mat-card-avatar class="example-header-image"></div>
-                    <mat-card-title>{{usuario.name}}</mat-card-title>
-                    <mat-card-subtitle>{{usuario.surname}}</mat-card-subtitle>
-                </mat-card-header>
-                <img class="aa" mat-card-image src="../../../assets/img/mike.jpg" alt="Photo of a Shiba Inu">
-                <mat-card-content>
-                    <p class="text-center">
-                        {{usuario.email}}
-                    </p>
-                </mat-card-content>
-                <mat-card-actions>
-                    <button mat-button>COMPLETO</button>
-                    <button mat-button>INCOMPLETO</button>
+              <div class="col-3  mb-3">
+                <p>Pasaporte</p>
+                <input type="file" class="d-none"
+                  (change)="OnDocSelected($event)" #pasaporteInput>
+                <p><small>Haga Click En La Imagen Para Seleccionar Su Documento</small></p>
+                <img [src]="'../../../assets/img/pasaporte.jpg'" class="photo"
+                  alt="Sin
+                  Imagen" (click)="pasaporteInput.click()">
+                <button class="btn button3" (click)="uploadExtracto()">Enviar</button>
+              </div>
 
-                </mat-card-actions>
-            </mat-card>
-        </div>
+              <hr>
+
+
+              <div class="col-3 mb-3">
+                <p>Tarjeta De Propiedad Del Vehiculo</p>
+                <input type="file" class="d-none"
+                  (change)="OnDocSelected($event)" #tarjetavInput>
+                <p><small>Haga Click En La Imagen Para Seleccionar Su Documento</small></p>
+                <img [src]="'../../../assets/img/Tvehiculo.jpg'" class="photo"
+                  alt="Sin
+                  Imagen" (click)="tarjetavInput.click()">
+                <button class="btn button3" (click)="uploadExtracto()">Enviar</button>
+              </div>
+
+
+              <div class="col-3  mb-3">
+                <p>Matricula Inmobiliaria</p>
+                <input type="file" class="d-none"
+                  (change)="OnDocSelected($event)" #matriculaInput>
+                <p><small>Haga Click En La Imagen Para Seleccionar Su Documento</small></p>
+                <img [src]="'../../../assets/img/tradicion.jpg'" class="photo"
+                  alt="Sin
+                  Imagen" (click)="matriculaInput.click()">
+                <button class="btn button3" (click)="uploadExtracto()">Enviar</button>
+              </div>
+
+              <hr>
+
+              <div class="col-3  mb-3">
+                <p>Extractos Bancarios Ultimos 6 Meses</p>
+                <input type="file" class="d-none"
+                  (change)="OnDocSelected($event)" #extractoInput>
+                <p><small>Haga Click En La Imagen Para Seleccionar Su Documento</small></p>
+                <img [src]="'../../../assets/img/extractobanco.jpg'"
+                  class="photo" alt="Sin Imagen"
+                  (click)="extractoInput.click()">
+                <button class="btn button3" (click)="uploadExtracto()">Enviar</button>
+              </div>
+
+              <hr>
+              <div class="col-3 mb-3">
+                <p>Foto Personal</p>
+                <input type="file" class="d-none"
+                  (change)="OnPhotoSelected($event)" #photoInput>
+                <p><small>Click En La Imagen Para Seleccionar Su Foto</small></p>
+                <img [src]="photoSeleted || '../../../assets/img/mike.jpg'"
+                  class="photo" alt="Sin Imagen" (click)="photoInput.click()">
+                <button class="btn button3" (click)="uploadPhoto()">Enviar</button>
+              </div>
+
+            </div>
+          </div>
+        </mat-card-content>
+
+      </mat-card>
     </div>
+    <div class="col-md-4">
+    <app-datosconstruccion></app-datosconstruccion>
+  </div>
 </div>
 
 
@@ -88,8 +146,6 @@
 <pre>Valid:{{formularioSolicitud.valid}}</pre>
 <pre>{{tasa}}</pre>
 <pre>{{formularioSolicitud.value | json}}</pre> -->
-
-
 <!-- <pre class="noS">{{this.regInmueble}}</pre>
 <pre class="noS">{{this.regPersonales}}</pre>
 <pre class="noS">{{this.regVehiculo}}</pre>
